Made Normal Puzzles functional

--- a/app/src/main/res/layout/activity_normal_game4.xml
+++ b/app/src/main/res/layout/activity_normal_game4.xml
@@ -75,7 +75,11 @@
         android:layout_marginRight="20dp"
         android:layout_weight="0"
         android:orientation="horizontal">
-
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect1"
             android:layout_width="70dp"
@@ -85,7 +89,19 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/light"/>
-
+            <ImageView
+                android:id="@+id/correctImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/correct"
+                android:visibility="invisible" />
+        </FrameLayout>
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong1"
             android:layout_width="70dp"
@@ -96,6 +112,20 @@
             android:scaleType="centerInside"
             android:src="@drawable/rose" />
 
+            <ImageView
+                android:id="@+id/wrongImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/wrong"
+                android:visibility="invisible" />
+        </FrameLayout>
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong2"
             android:layout_width="70dp"
@@ -105,7 +135,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/laksa" />
-
+            <ImageView
+                android:id="@+id/wrongImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/correct"
+                android:visibility="invisible" />
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -117,7 +154,12 @@
         android:layout_marginBottom="10dp"
         android:layout_weight="0"
         android:orientation="horizontal">
-
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong3"
             android:layout_width="70dp"
@@ -127,7 +169,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/idkwhatthis_1_" />
+            <ImageView
+                android:id="@+id/wrongImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong4"
             android:layout_width="70dp"
@@ -137,7 +193,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/orchid" />
+            <ImageView
+                android:id="@+id/wrongImg4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect2"
             android:layout_width="70dp"
@@ -147,6 +217,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/dial_up_telephone" />
+            <ImageView
+                android:id="@+id/correctImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -160,6 +238,12 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong5"
             android:layout_width="70dp"
@@ -169,7 +253,20 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/grounder" />
-
+            <ImageView
+                android:id="@+id/wrongImg5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect3"
             android:layout_width="70dp"
@@ -179,6 +276,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/alarm_clock" />
+            <ImageView
+                android:id="@+id/correctImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
+
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
 
         <ImageButton
             android:id="@+id/imageButtonNormalWrong6"
@@ -189,7 +301,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/snacks" />
-
+        <ImageView
+            android:id="@+id/wrongImg6"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/wrong"
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
+    </FrameLayout>
 
     </LinearLayout>
 
