--- a/app/src/main/res/layout/activity_normal_game5.xml
+++ b/app/src/main/res/layout/activity_normal_game5.xml
@@ -76,6 +76,11 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect1"
             android:layout_width="70dp"
@@ -86,6 +91,20 @@
             android:scaleType="centerInside"
             android:src="@drawable/orchid"/>
 
+            <ImageView
+                android:id="@+id/correctImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/correct"
+                android:visibility="invisible" />
+        </FrameLayout>
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong1"
             android:layout_width="70dp"
@@ -95,7 +114,20 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/butterfly" />
+            <ImageView
+                android:id="@+id/wrongImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/wrong"
+                android:visibility="invisible" />
+        </FrameLayout>
 
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong2"
             android:layout_width="70dp"
@@ -105,6 +137,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/ang_ku_kueh" />
+            <ImageView
+                android:id="@+id/wrongImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/correct"
+                android:visibility="invisible" />
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -118,6 +158,12 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong3"
             android:layout_width="70dp"
@@ -127,7 +173,20 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/mosquito_coil" />
-
+            <ImageView
+                android:id="@+id/wrongImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect2"
             android:layout_width="70dp"
@@ -137,7 +196,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/rose" />
+            <ImageView
+                android:id="@+id/correctImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong4"
             android:layout_width="70dp"
@@ -147,7 +220,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/armchair" />
-
+            <ImageView
+                android:id="@+id/wrongImg4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -160,6 +240,12 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong5"
             android:layout_width="70dp"
@@ -169,7 +255,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/radio" />
+            <ImageView
+                android:id="@+id/wrongImg5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong6"
             android:layout_width="70dp"
@@ -179,7 +279,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/food_cover" />
+            <ImageView
+                android:id="@+id/wrongImg6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect3"
             android:layout_width="70dp"
@@ -189,7 +303,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/yellow_flower" />
-
+            <ImageView
+                android:id="@+id/correctImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
     </LinearLayout>
 
