--- a/app/src/main/res/layout/activity_normal_game8.xml
+++ b/app/src/main/res/layout/activity_normal_game8.xml
@@ -47,7 +47,6 @@
 
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -67,8 +66,6 @@
 
     </LinearLayout>
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -77,35 +74,74 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong1"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/butterfly"/>
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong1"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/butterfly"/>
+            <ImageView
+                android:id="@+id/wrongImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/wrong"
+                android:visibility="invisible" />
+        </FrameLayout>
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong2"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/dimsum" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong2"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/dimsum" />
+            <ImageView
+                android:id="@+id/wrongImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/wrong"
+                android:visibility="invisible" />
+        </FrameLayout>
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect1"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/household1" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect1"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/household1" />
+            <ImageView
+                android:id="@+id/correctImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/correct"
+                android:visibility="invisible" />
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -119,35 +155,74 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong3"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/yellow_flower" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong3"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/yellow_flower" />
+            <ImageView
+                android:id="@+id/wrongImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect2"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/mosquito_coil" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect2"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/mosquito_coil" />
+            <ImageView
+                android:id="@+id/correctImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong4"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/dog" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong4"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/dog" />
+            <ImageView
+                android:id="@+id/wrongImg4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -161,36 +236,74 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect3"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/householditems" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect3"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/householditems" />
+            <ImageView
+                android:id="@+id/correctImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong5"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/ang_ku_kueh" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong5"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/ang_ku_kueh" />
+            <ImageView
+                android:id="@+id/wrongImg5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong6"
+        <FrameLayout
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/orchid" />
-
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong6"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/orchid" />
+            <ImageView
+                android:id="@+id/wrongImg6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
     </LinearLayout>
 
