--- a/app/src/main/res/layout/activity_normal_game2.xml
+++ b/app/src/main/res/layout/activity_normal_game2.xml
@@ -76,7 +76,12 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
-        <ImageButton
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"> <ImageButton
             android:id="@+id/imageButtonNormalCorrect1"
             android:layout_width="70dp"
             android:layout_height="80dp"
@@ -85,7 +90,20 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/food"/>
+        <ImageView
+            android:id="@+id/correctImg1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/correct"
+            android:visibility="invisible" />
+        </FrameLayout>
 
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong1"
             android:layout_width="70dp"
@@ -95,7 +113,20 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/parrot" />
+            <ImageView
+                android:id="@+id/wrongImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/wrong"
+                android:visibility="invisible" />
+        </FrameLayout>
 
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong2"
             android:layout_width="70dp"
@@ -105,6 +136,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/mahjong" />
+        <ImageView
+            android:id="@+id/wrongImg2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/wrong"
+            android:visibility="invisible" />
+    </FrameLayout>
 
     </LinearLayout>
 
@@ -118,6 +157,11 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong3"
             android:layout_width="70dp"
@@ -127,7 +171,20 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/dog" />
+        <ImageView
+            android:id="@+id/wrongImg3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/wrong"
+            android:visibility="invisible" />
+    </FrameLayout>
 
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong4"
             android:layout_width="70dp"
@@ -137,7 +194,20 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/armchair" />
+            <ImageView
+                android:id="@+id/wrongImg4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/wrong"
+                android:visibility="invisible" />
+        </FrameLayout>
 
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect2"
             android:layout_width="70dp"
@@ -147,6 +217,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/satay" />
+        <ImageView
+            android:id="@+id/correctImg2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/correct"
+            android:visibility="invisible" />
+    </FrameLayout>
 
     </LinearLayout>
 
@@ -160,6 +238,12 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong5"
             android:layout_width="70dp"
@@ -169,7 +253,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/mosquito_coil" />
+        <ImageView
+            android:id="@+id/wrongImg5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/wrong"
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
+    </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect3"
             android:layout_width="70dp"
@@ -179,7 +277,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/laksa" />
+            <ImageView
+                android:id="@+id/correctImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong6"
             android:layout_width="70dp"
@@ -189,7 +301,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/lotus" />
-
+            <ImageView
+                android:id="@+id/wrongImg6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
     </LinearLayout>
 
