--- a/app/src/main/res/layout/activity_normal_game7.xml
+++ b/app/src/main/res/layout/activity_normal_game7.xml
@@ -75,7 +75,11 @@
         android:layout_marginRight="20dp"
         android:layout_weight="0"
         android:orientation="horizontal">
-
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong1"
             android:layout_width="70dp"
@@ -86,6 +90,20 @@
             android:scaleType="centerInside"
             android:src="@drawable/rose"/>
 
+            <ImageView
+                android:id="@+id/wrongImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/wrong"
+                android:visibility="invisible" />
+        </FrameLayout>
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong2"
             android:layout_width="70dp"
@@ -95,7 +113,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/mahjong" />
+            <ImageView
+                android:id="@+id/wrongImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/correct"
+                android:visibility="invisible" />
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect1"
             android:layout_width="70dp"
@@ -105,7 +137,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/ang_ku_kueh" />
-
+            <ImageView
+                android:id="@+id/correctImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -117,7 +156,12 @@
         android:layout_marginBottom="10dp"
         android:layout_weight="0"
         android:orientation="horizontal">
-
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong3"
             android:layout_width="70dp"
@@ -127,7 +171,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/flask_x3_" />
+            <ImageView
+                android:id="@+id/wrongImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect2"
             android:layout_width="70dp"
@@ -137,7 +195,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/idkwhatthis_1_" />
+            <ImageView
+                android:id="@+id/correctImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong4"
             android:layout_width="70dp"
@@ -147,7 +219,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/rice" />
-
+            <ImageView
+                android:id="@+id/wrongImg4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -159,7 +238,12 @@
         android:layout_marginBottom="10dp"
         android:layout_weight="0"
         android:orientation="horizontal">
-
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalWrong5"
             android:layout_width="70dp"
@@ -169,6 +253,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/spoon" />
+            <ImageView
+                android:id="@+id/wrongImg5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
+
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
 
         <ImageButton
             android:id="@+id/imageButtonNormalWrong6"
@@ -179,7 +278,21 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/clogs" />
+            <ImageView
+                android:id="@+id/wrongImg6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
         <ImageButton
             android:id="@+id/imageButtonNormalCorrect3"
             android:layout_width="70dp"
@@ -189,6 +302,14 @@
             android:background="@color/white"
             android:scaleType="centerInside"
             android:src="@drawable/snacks" />
+            <ImageView
+                android:id="@+id/correctImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
 
     </LinearLayout>
