--- a/app/src/main/res/layout/activity_howtoplay.xml
+++ b/app/src/main/res/layout/activity_howtoplay.xml
@@ -7,19 +7,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="0.45"
         android:background="@color/bgPurple"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/htpLogo"
+            android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="0.4"
+            android:layout_gravity="bottom|end"
             android:layout_marginTop="20dp"
-            android:src="@drawable/logo"
-            android:layout_gravity="center_horizontal" />
+            app:srcCompat="@drawable/logo" />
     </LinearLayout>
-
     <TextView
         android:id="@+id/htpTitle"
         android:layout_width="wrap_content"
@@ -34,15 +35,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:orientation="vertical"
             android:paddingTop="20dp"
             android:paddingBottom="20dp">
@@ -50,21 +49,24 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
 
                 <ImageView
                     android:id="@+id/htpStar"
-                    android:layout_width="140dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/star6" />
+                    app:srcCompat="@drawable/star6"
+                     />
 
                 <TextView
                     android:id="@+id/htp2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_weight="5"
                     android:text="@string/htp2"
                     android:textSize="25sp"
@@ -75,11 +77,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
 
                 <TextView
                     android:id="@+id/htp3"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/htp3"
@@ -88,8 +92,8 @@
 
                 <ImageView
                     android:id="@+id/htpExample"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="2"
                     app:srcCompat="@drawable/example" />
             </LinearLayout>
@@ -98,19 +102,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
 
                 <ImageView
                     android:id="@+id/htpCorrect"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/correct" />
-
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/correct"/>
                 <TextView
                     android:id="@+id/htp4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:layout_weight="5"
                     android:text="@string/htp4"
                     android:textSize="25sp"
                     android:textStyle="bold" />
@@ -120,19 +127,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
 
                 <ImageView
                     android:id="@+id/htpWrong"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/wrong" />
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/wrong"
+                    />
 
                 <TextView
                     android:id="@+id/htp5"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
+                    android:layout_weight="5"
                     android:text="@string/htp5"
                     android:textSize="25sp"
                     android:textStyle="bold" />
