--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,15 +10,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:layout_weight="0.05"
+        android:layout_height="0dp"
+        android:layout_weight="0.45"
         android:background="@color/bgPurple"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="0.4"
             android:layout_gravity="bottom|end"
             android:layout_marginTop="20dp"
             app:srcCompat="@drawable/logo" />
@@ -29,14 +30,13 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="@string/Title"
-        android:textSize="40sp"
+        android:textSize="30dp"
         android:textStyle="bold" />
     <!-- Increased font size -->
 
     <!-- Button with one drawable -->
-    <include layout="@layout/button_easy" />
+    <include layout="@layout/button_easy"/>
     <include layout="@layout/button_normal" />
     <include layout="@layout/button_expert" />
 
@@ -71,7 +71,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0dp"
         android:layout_weight="0.03"
         android:background="@color/bgPurple" />
 </LinearLayout>
