--- a/app/src/main/res/layout/activity_puzzle_easy.xml
+++ b/app/src/main/res/layout/activity_puzzle_easy.xml
@@ -7,15 +7,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:layout_weight="0.15"
+        android:layout_height="0dp"
+        android:layout_weight="0.4"
         android:background="@color/bgPurple"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
             android:layout_gravity="bottom|end"
             android:layout_marginTop="20dp"
             app:srcCompat="@drawable/logo" />
@@ -37,15 +38,18 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.6"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_weight="0.1">
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <!-- First item -->
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -68,6 +72,8 @@
                     android:layout_marginLeft="70dp"
                     android:src="@drawable/laksa" />
             </LinearLayout>
+
+            <!-- Second item -->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -97,6 +103,7 @@
                     android:textSize="28sp" />
             </LinearLayout>
 
+            <!-- Buttons -->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,6 +141,8 @@
                     android:textSize="25sp"
                     app:backgroundTint="@null" />
             </LinearLayout>
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
