--- a/app/src/main/res/layout/activity_puzzle_normal.xml
+++ b/app/src/main/res/layout/activity_puzzle_normal.xml
@@ -7,8 +7,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:layout_weight="0.15"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
         android:background="@color/bgPurple"
         android:orientation="vertical">
 
@@ -35,10 +35,11 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.6"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_weight="0.1">>
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -417,7 +418,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.1dp"
         android:layout_weight="0.1"
         android:background="@color/bgPurple" />
 </LinearLayout>
